# TabTypist-v2

./: .gitignore  CONTEXT.md  LICENSE  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
Resources/: AppIcon.icns  Info.plist  TabTypist.entitlements
Sources/TabTypist/: AXMonitor.swift  FieldEdgeIndicator.swift  KeyCapture.swift  MenuBarController.swift  OCRHygiene.swift  OnboardingFlow.swift  OverlayWindow.swift  PopupCardWindow.swift  SettingsWindowController.swift  TabTypistApp.swift  VisualContextCapture.swift
crates/tabtypist-core/: Cargo.toml
crates/tabtypist-core/examples/: calibrate_confidence.rs
crates/tabtypist-core/src/: completion_engine.rs  exclusion_engine.rs  ipc.rs  main.rs  model_downloader.rs  model_runtime.rs  settings_store.rs  telemetry.rs
docs/: RELEASE_CHECKLIST.md  roadmap-competitive-parity.md
docs/adr/: 0001-rust-core-with-native-ui-shells.md  0002-default-on-in-messaging-apps.md  0003-hosted-mode-shape-deferred-to-v2.md  0004-functional-source-license.md  0005-swift-launches-rust-in-app-bundle.md
docs/issues/: 0001-process-skeleton-ipc.md  0002-static-ghost-text-overlay.md  0003-caret-tracking.md  0004-tab-escape-accept-dismiss.md  0005-llama-cpp-real-completion.md  0006-settings-store.md  0007-model-downloader.md  0008-language-router-amharic.md  0009-exclusion-engine.md  0010-remote-signed-exclusion-config.md  0011-messaging-first-activation-toast.md  0012-menu-bar-ui.md  (+9 more)
scripts/: bundle.sh  generate-appcast-entry.sh  generate-dmg-background.py  generate-icon.py  make-dmg.sh  make-signing-cert.sh
(+1 files in other folders)
